analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/valPropertyWithSetter.kt

val <caret>i: Int = 0
    set(value) {}